# Gaussian-Process-Regression

./: .coverage  .gitignore  Pipfile  README.md  gaussian_regression.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: .coverage  conf.py  index.rst
docs/_build/doctrees/: StatisticsAndOptimization.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  StatisticsAndOptimization.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/StatisticsAndOptimization/: gaussian_regression.html
docs/_build/html/_sources/: StatisticsAndOptimization.rst.txt  modules.rst.txt
src/: gaussian_regression.py
src/StatisticsAndOptimization/: gaussian_regression.py
src/StatisticsAndOptimization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_gaussian_regression.py
tests/: test_gaussian_regression.py
