[metadata]
name = StatisticsAndOptimization
description = Stats and Optimization Playground
author = Trevor Rose
license = GPL-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    StatisticsAndOptimization
install_requires = 
    numpy >= 1.22
    matplotlib >= 3.6
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=1.0
    flake8>=4.0
    tox>=4.0

[options.package_data]
StatisticsAndOptimization = py.typed

[flake8]
max-line-length = 160